Generate profile API doc
